--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,15 @@
 {{ $current := . }}
 <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top shadow-sm" id="navbar-main-menu">
     <div class="container">
-        <a class="navbar-brand font-weight-bold" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
+        <div class="homepage-logo">
+          <a class="navbar-brand font-weight-bold" href="{{ .Site.BaseURL }}">
+            {{- if .Site.Params.logoImage -}}
+              <img src="{{ .Site.Params.logoImage | relURL }}" class="img-fluid">
+            {{- else -}}
+              {{ .Site.Title }}
+            {{- end -}}
+          </a>
+        </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
