--- a/src/scss/chunky-poster.scss
+++ b/src/scss/chunky-poster.scss
@@ -7,6 +7,12 @@
     }
 }
 
+.homepage-logo {
+    img {
+        max-height: 40px;
+    }
+}
+
 .author .name a, .author .social a {
     color: $gray-900;
     text-decoration: none;
