--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -48,6 +48,10 @@
                         Copyright &copy; {{ .Site.Title }} {{ now.Year }}
                     {{ end }}
                 </p>
+
+                <p class="text-muted">
+                Made by <a href="https://larserik.storbukas.no/" target="_blank">Storbukås</a>
+                </p>
             </div>
         </div>
     </div>
