--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -10,7 +10,9 @@
             {{- end -}}
           </a>
         </div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse"
+          data-target="#main-menu" aria-controls="main-menu"
+          aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="main-menu">
@@ -20,7 +22,9 @@
             {{- end -}}
             {{ with .Site.Menus.main }}
                 {{ range . }}
-                    <li class="nav-item{{ if $current.IsMenuCurrent "main" . }} active{{ end }}"><a class="nav-link" href="{{ .URL | relLangURL }}">{{ .Name }}</a></li>
+                  <li class="nav-item{{ if (eq $current.RelPermalink .URL) }} active{{ end }}">
+                    <a class="nav-link" href="{{ .URL | relLangURL }}">{{ .Name }}</a>
+                  </li>
                 {{ end }}
             {{ end }}
             </ul>
